--- a/app/src/main/res/layout/fragment_signup_info.xml
+++ b/app/src/main/res/layout/fragment_signup_info.xml
@@ -52,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/info_mRadioButton"
+        android:checked="true"
         android:layout_weight="0.5" />
 
       <RadioButton
