--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -4,156 +4,171 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-  <LinearLayout
-    android:layout_width="300dp"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_gravity="center">
-
-    <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="18sp"
-      android:textColor="@color/colorBlack"
-      android:text="회원가입"
-      android:layout_gravity="center"
-      android:paddingTop="20dp"
-      android:paddingBottom="10dp" />
-
-  </LinearLayout>
-
-  <LinearLayout
+  <FrameLayout
+    android:id="@+id/fl_signup"
     android:orientation="horizontal"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="55dp">
+
+    <ImageButton
+      android:layout_gravity="left|center"
+      android:layout_width="50dp"
+      android:layout_height="match_parent"
+      android:background="@null"
+      android:src="@drawable/back"
+      android:id="@+id/ibtn_back"/>
+    <TextView
+      android:text="회원가입"
+      android:textColor="@color/colorBlack"
+      android:textSize="20sp"
+      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
+  </FrameLayout>
+
+  <LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="25dp"
-    android:layout_marginLeft="25dp"
-    android:layout_marginRight="25dp">
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="50dp"
+    android:layout_marginRight="50dp">
+
+    <TextView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_marginBottom="5dp"
+      android:textSize="20sp"
+      android:textColor="@color/colorBlack"
+      android:text="아이디"
+      android:gravity="left" />
 
     <EditText
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:background="@drawable/edittext"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
       android:textSize="15sp"
-      android:id="@+id/signup_idEditText"
-      android:hint="아이디"
+      android:id="@+id/edt_signup_id"
+      android:hint="아이디를 입력하세요."
       android:maxLength="15"
-      android:layout_weight="0.6"
-      android:paddingBottom="20dp"
-      android:paddingTop="20dp"
-      android:paddingLeft="20dp"/>
-
-    <Button
-      android:layout_width="wrap_content"
-      android:layout_height="50dp"
-      android:id="@+id/signup_overButton"
-      android:textSize="13sp"
-      android:text="중복확인"
-      android:layout_marginLeft="10dp"
-      android:textColor="@color/colorWhite"
-      android:paddingBottom="10dp"
-      android:paddingTop="10dp"/>
-
-  </LinearLayout>
-
-  <LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_gravity="right">
+      android:paddingBottom="15dp"
+      android:paddingTop="15dp"
+      android:paddingLeft="15dp"/>
 
     <TextView
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginRight="30dp"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_marginTop="5dp"
       android:textSize="12sp"
-      android:text="6-15자 이내로 입력해주세요"
-      android:gravity="end" />
+      android:text="6-15자 사이로 입력해주세요"
+      android:gravity="left" />
 
   </LinearLayout>
 
   <LinearLayout
     android:orientation="vertical"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="25dp"
-    android:layout_marginLeft="25dp"
-    android:layout_marginRight="25dp">
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="50dp"
+    android:layout_marginRight="50dp">
+
+    <TextView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_marginBottom="5dp"
+      android:textSize="20sp"
+      android:textColor="@color/colorBlack"
+      android:text="이메일"
+      android:gravity="left" />
 
     <EditText
+      android:background="@drawable/edittext"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
       android:textSize="15sp"
-      android:id="@+id/signup_emailEditText"
-      android:hint="이메일주소"
-      android:paddingBottom="20dp"
-      android:paddingTop="20dp"
-      android:paddingLeft="20dp"
+      android:id="@+id/edt_signup_email"
+      android:hint="이메일 주소를 입력하세요."
+      android:ems="10"
       android:inputType="textEmailAddress"
-      android:ems="10"/>
-
-    <EditText
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:textSize="15sp"
-      android:id="@+id/signup_pwEditText"
-      android:hint="비밀번호"
-      android:paddingBottom="20dp"
-      android:paddingTop="20dp"
-      android:paddingLeft="20dp"
-      android:layout_marginTop="10dp"
-      android:inputType="textPassword"
-      android:ems="10"/>
-
-    <EditText
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:textSize="15sp"
-      android:id="@+id/signup_repwEditText"
-      android:hint="비밀번호 확인"
-      android:paddingBottom="20dp"
-      android:paddingTop="20dp"
-      android:paddingLeft="20dp"
-      android:layout_marginTop="10dp"
-      android:inputType="textPassword"
-      android:ems="10"/>
-
+      android:paddingBottom="15dp"
+      android:paddingTop="15dp"
+      android:paddingLeft="15dp"/>
 
   </LinearLayout>
 
   <LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_gravity="right">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="50dp"
+    android:layout_marginRight="50dp">
 
     <TextView
-      android:layout_width="fill_parent"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_marginBottom="5dp"
+      android:textSize="20sp"
+      android:textColor="@color/colorBlack"
+      android:text="비밀번호"
+      android:gravity="left" />
+
+    <EditText
+      android:background="@drawable/edittext"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginRight="30dp"
+      android:textSize="15sp"
+      android:id="@+id/edt_signup_pw"
+      android:hint="비밀번호를 입력하세요."
+      android:paddingBottom="15dp"
+      android:paddingTop="15dp"
+      android:paddingLeft="15dp"
+      android:inputType="textPassword"
+      android:ems="10"/>
+
+    <EditText
+      android:background="@drawable/edittext"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:textSize="15sp"
+      android:id="@+id/edt_signup_repw"
+      android:hint="비밀번호를 다시 입력하세요."
+      android:paddingBottom="15dp"
+      android:paddingTop="15dp"
+      android:paddingLeft="15dp"
+      android:layout_marginTop="10dp"
+      android:inputType="textPassword"
+      android:ems="10"/>
+
+    <TextView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_marginTop="5dp"
       android:textSize="12sp"
-      android:text="8-15자 이내, 한글, 영문 대소문자, 특수문자 조합 "
-      android:gravity="end" />
+      android:text="8-15자 이내,\n숫자, 영문 대소문자, 특수문자 중 3개 이상 조합해주세요."
+      android:gravity="left" />
 
   </LinearLayout>
 
   <LinearLayout
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="right"
-    android:layout_marginLeft="25dp"
-    android:layout_marginTop="30dp"
-    android:layout_marginRight="25dp">
+    android:layout_marginTop="15dp"
+    android:layout_marginLeft="50dp"
+    android:layout_marginRight="50dp">
 
     <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:id="@+id/signupButton"
+      android:id="@+id/btn_signup_next"
       android:textSize="15sp"
-      android:text="가입하기"
+      android:text="다음 단계"
       android:textColor="@color/colorWhite"
       android:paddingBottom="20dp"
-      android:paddingTop="20dp" />
+      android:paddingTop="20dp"/>
 
   </LinearLayout>
 </LinearLayout>
