--- a/app/src/main/res/layout/fragment_signup_info.xml
+++ b/app/src/main/res/layout/fragment_signup_info.xml
@@ -5,115 +5,153 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+  <FrameLayout
+    android:id="@+id/fl_signup_info"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="55dp">
+
+    <ImageButton
+      android:layout_gravity="left|center"
+      android:layout_width="50dp"
+      android:layout_height="match_parent"
+      android:background="@null"
+      android:src="@drawable/back"
+      android:id="@+id/ibtn_back"/>
+    <TextView
+      android:text="회원가입"
+      android:textColor="@color/colorBlack"
+      android:textSize="20sp"
+      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"/>
+  </FrameLayout>
+
   <LinearLayout
+    android:orientation="vertical"
+    android:gravity="center_vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#EAEAEA"
-    android:layout_gravity="center">
-
-    <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="15sp"
-      android:textColor="@color/colorBlack"
-      android:text="추가정보 입력"
-      android:layout_gravity="center"
-      android:paddingTop="15dp"
-      android:paddingBottom="15dp" />
-  </LinearLayout>
-
-  <LinearLayout
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="20dp">
+    android:layout_marginLeft="50dp"
+    android:layout_marginRight="50dp">
 
     <TextView
-      android:layout_width="100dp"
-      android:layout_height="wrap_content"
-      android:paddingRight="30dp"
-      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:gravity="left"
       android:textSize="15sp"
       android:textColor="@color/colorBlack"
       android:text="성별" />
 
     <RadioGroup
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_marginLeft="50dp"
+      android:layout_marginRight="50dp"
+      android:layout_gravity="center_vertical"
       android:orientation="horizontal"
-      android:id="@+id/info_genderRadioGroup">
+      android:id="@+id/rg_gender">
 
       <RadioButton
         android:text="남자"
+        android:layout_gravity="left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/info_mRadioButton"
+        android:id="@+id/rbtn_male"
         android:checked="true"
-        android:layout_weight="0.5" />
+        android:layout_weight="1"/>
 
       <RadioButton
         android:text="여자"
+        android:layout_gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/info_wRadioButton"
-        android:layout_weight="1" />
+        android:id="@+id/rbtn_female"
+        android:layout_weight="1"/>
 
     </RadioGroup>
 
   </LinearLayout>
 
   <LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
+    android:orientation="vertical"
+    android:gravity="center_vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="15dp"
-    android:layout_marginLeft="30dp"
-    android:weightSum="1">
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="50dp"
+    android:layout_marginRight="50dp">
 
     <TextView
-      android:layout_width="100dp"
-      android:layout_height="wrap_content"
-      android:paddingRight="30dp"
-      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:gravity="left"
       android:textSize="15sp"
       android:textColor="@color/colorBlack"
       android:text="출생년도" />
 
-    <EditText
-      android:layout_width="100dp"
-      android:layout_height="wrap_content"
-      android:textSize="13sp"
-      android:id="@+id/info_ageEditText"
-      android:hint="예) 2017"
-      android:background="@drawable/edittext"
-      android:paddingBottom="10dp"
-      android:paddingTop="10dp"
-      android:paddingLeft="10dp"/>
+    <Spinner
+      android:id="@+id/sp_age"
+      android:layout_width="match_parent"
+      android:layout_height="40dp">
 
+    </Spinner>
 
   </LinearLayout>
 
   <LinearLayout
-    android:layout_width="fill_parent"
+    android:orientation="vertical"
+    android:gravity="center_vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="15dp"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="20dp"
-    android:orientation="horizontal"
-    android:weightSum="1">
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="50dp"
+    android:layout_marginRight="50dp">
 
     <TextView
-      android:layout_width="100dp"
-      android:layout_height="wrap_content"
-      android:paddingRight="10dp"
-      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:gravity="left"
       android:textSize="15sp"
       android:textColor="@color/colorBlack"
-      android:text="추천인 아이디" />
+      android:text="관심분야" />
+
+    <GridView
+      android:id="@+id/lv_favorites"
+      android:numColumns="2"
+      android:columnWidth="80dp"
+      android:layout_marginTop="10dp"
+      android:layout_width="match_parent"
+      android:layout_height="150dp"
+      android:choiceMode="multipleChoice" />
+
+    <TextView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_marginTop="5dp"
+      android:textSize="12sp"
+      android:text="3개 이상 선택해주세요"
+      android:gravity="left" />
+
+  </LinearLayout>
+
+  <LinearLayout
+    android:orientation="vertical"
+    android:gravity="center_vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="50dp"
+    android:layout_marginRight="50dp">
+
+    <TextView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:gravity="left"
+      android:textSize="15sp"
+      android:textColor="@color/colorBlack"
+      android:text="추천 아이디" />
 
     <EditText
       android:layout_width="121dp"
@@ -129,148 +167,6 @@
 
   </LinearLayout>
 
-  <RelativeLayout
-    android:layout_width="fill_parent"
-    android:layout_height="170dp"
-    android:layout_marginTop="15dp"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="20dp"
-    android:orientation="horizontal">
-
-    <TextView
-      android:id="@+id/tv_favorites"
-      android:layout_width="100dp"
-      android:layout_height="wrap_content"
-      android:paddingRight="30dp"
-      android:gravity="center"
-      android:textSize="15sp"
-      android:textColor="@color/colorBlack"
-      android:text="관심분야"/>
-
-    <TableLayout
-      android:id="@+id/tl_favorites"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_toRightOf="@+id/tv_favorites"
-      android:layout_toEndOf="@+id/tv_favorites">
-
-      <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <CheckBox
-          android:text="문화"
-          android:layout_width="wrap_content"
-          android:textSize="13sp"
-          android:layout_height="wrap_content"
-          android:id="@+id/info_cultureRadioButton"
-          android:layout_alignParentTop="true"
-          android:layout_alignParentRight="true"
-          android:layout_alignParentEnd="true"
-          android:layout_marginBottom="5dp"
-          android:layout_marginRight="30dp"
-          android:layout_marginEnd="30dp"/>
-        <CheckBox
-          android:text="쇼핑"
-          android:layout_below="@+id/info_cultureRadioButton"
-          android:textSize="13sp"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:id="@+id/info_shoppingRadioButton"
-          android:layout_alignBaseline="@+id/info_tripRadioButton"
-          android:layout_alignBottom="@+id/info_tripRadioButton"
-          android:layout_toLeftOf="@+id/info_tripRadioButton"
-          android:layout_toStartOf="@+id/info_tripRadioButton"
-          android:layout_marginBottom="5dp"
-          android:layout_marginRight="30dp"
-          android:layout_marginEnd="30dp"/>
-      </TableRow>
-      <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <CheckBox
-          android:text="뷰티"
-          android:textSize="13sp"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:id="@+id/info_beautyRadioButton"
-          android:layout_marginRight="30dp"
-          android:layout_marginEnd="30dp"
-          android:layout_marginBottom="5dp"
-          android:layout_alignParentTop="true"
-          android:layout_alignLeft="@+id/info_shoppingRadioButton"
-          android:layout_alignStart="@+id/info_shoppingRadioButton"/>
-        <CheckBox
-          android:text="여행"
-          android:textSize="13sp"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:id="@+id/info_tripRadioButton"
-          android:layout_marginRight="30dp"
-          android:layout_marginEnd="30dp"
-          android:layout_marginBottom="5dp"
-          android:layout_below="@+id/info_diningRadioButton"
-          android:layout_toRightOf="@+id/info_gameRadioButton"
-          android:layout_toEndOf="@+id/info_gameRadioButton"/>
-      </TableRow>
-      <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <CheckBox
-          android:text="게임"
-          android:textSize="13sp"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:id="@+id/info_gameRadioButton"
-          android:layout_marginRight="30dp"
-          android:layout_marginEnd="30dp"
-          android:layout_marginBottom="5dp"
-          android:layout_centerVertical="true"
-          android:layout_toLeftOf="@+id/info_cultureRadioButton"
-          android:layout_toStartOf="@+id/info_cultureRadioButton"/>
-        <CheckBox
-          android:text="금융"
-          android:layout_width="wrap_content"
-          android:textSize="13sp"
-          android:layout_height="wrap_content"
-          android:id="@+id/info_financeRadioButton"
-          android:layout_marginRight="30dp"
-          android:layout_marginEnd="30dp"
-          android:layout_marginBottom="5dp"
-          android:layout_above="@+id/info_gameRadioButton"
-          android:layout_alignLeft="@+id/info_diningRadioButton"
-          android:layout_alignStart="@+id/info_diningRadioButton"/>
-      </TableRow>
-      <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <CheckBox
-          android:text="외식"
-          android:layout_width="81dp"
-          android:layout_height="wrap_content"
-          android:textSize="13sp"
-          android:id="@+id/info_diningRadioButton"
-          android:layout_marginRight="30dp"
-          android:layout_marginEnd="30dp"
-          android:layout_below="@+id/info_financeRadioButton"
-          android:layout_toRightOf="@+id/tv_favorites"
-          android:layout_toEndOf="@+id/tv_favorites"/>
-      </TableRow>
-    </TableLayout>
-
-    <TextView
-      android:layout_width="150dp"
-      android:layout_height="30dp"
-      android:gravity="center"
-      android:textSize="12sp"
-      android:textColor="#980000"
-      android:paddingTop="5dp"
-      android:text="최소 3개 이상 선택해야 합니다."
-      android:layout_marginLeft="100dp"
-      android:layout_marginTop="20dp"
-      android:layout_alignParentBottom="true"/>
-
-  </RelativeLayout>
 
   <LinearLayout
     android:layout_width="fill_parent"
