--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,25 @@
               android:layout_height="match_parent"
               android:orientation="vertical" >
 
+  <android.support.v4.view.ViewPager
+    android:id="@+id/vp_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+  </android.support.v4.view.ViewPager>
+
+  <LinearLayout
+    android:id="@+id/intro_fragment_line"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:background="@color/colorWhite"
+    android:layout_height="0.1dp">
+  </LinearLayout>
+
   <LinearLayout
     android:id="@+id/main_fragment_container"
     android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:layout_gravity="bottom"
     android:paddingTop="5dp"
     android:background="@color/colorPuzi"
     android:layout_height="56dp">
@@ -129,19 +144,5 @@
     </FrameLayout>
 
   </LinearLayout>
-  <LinearLayout
-    android:id="@+id/intro_fragment_line"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:background="@color/colorWhite"
-    android:layout_height="0.1dp">
-  </LinearLayout>
-
-  <android.support.v4.view.ViewPager
-    android:id="@+id/vp_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_below="@+id/ll">
-  </android.support.v4.view.ViewPager>
 
 </LinearLayout>
