--- a/app/src/main/res/layout/fragment_signup_info.xml
+++ b/app/src/main/res/layout/fragment_signup_info.xml
@@ -5,236 +5,296 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-  <FrameLayout
-    android:id="@+id/fl_signup_info"
-    android:orientation="horizontal"
+  <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="55dp">
+    android:layout_height="match_parent">
 
-    <ImageButton
-      android:layout_gravity="left|center"
-      android:layout_width="50dp"
-      android:layout_height="match_parent"
-      android:background="@null"
-      android:src="@drawable/back"
-      android:id="@+id/ibtn_back"/>
-    <TextView
-      android:text="회원가입"
-      android:textColor="@color/colorBlack"
-      android:textSize="20sp"
-      android:gravity="center"
+    <LinearLayout
+      android:orientation="vertical"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
-  </FrameLayout>
+      android:layout_height="match_parent">
 
-  <LinearLayout
-    android:orientation="vertical"
-    android:gravity="center_vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="50dp"
-    android:layout_marginRight="50dp">
+      <FrameLayout
+        android:id="@+id/fl_signup_info"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="55dp">
 
-    <TextView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:gravity="left"
-      android:textSize="15sp"
-      android:textColor="@color/colorBlack"
-      android:text="성별" />
+        <ImageButton
+          android:layout_gravity="left|center"
+          android:layout_width="50dp"
+          android:layout_height="match_parent"
+          android:background="@null"
+          android:src="@drawable/back"
+          android:id="@+id/ibtn_back"/>
+        <TextView
+          android:text="회원가입"
+          android:textColor="@color/colorBlack"
+          android:textSize="20sp"
+          android:gravity="center"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"/>
+      </FrameLayout>
 
-    <RadioGroup
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_marginLeft="50dp"
-      android:layout_marginRight="50dp"
-      android:layout_gravity="center_vertical"
-      android:orientation="horizontal"
-      android:id="@+id/rg_gender">
-
-      <RadioButton
-        android:text="남자"
-        android:layout_gravity="left"
-        android:layout_width="wrap_content"
+      <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rbtn_male"
-        android:checked="true"
-        android:layout_weight="1"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
-      <RadioButton
-        android:text="여자"
-        android:layout_gravity="right"
-        android:layout_width="wrap_content"
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:gravity="left"
+          android:textSize="15sp"
+          android:textColor="@color/colorBlack"
+          android:text="성별"/>
+
+        <RadioGroup
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginLeft="45dp"
+          android:layout_marginRight="45dp"
+          android:layout_gravity="center_vertical"
+          android:orientation="horizontal"
+          android:id="@+id/rg_gender">
+
+          <RadioButton
+            android:text="남자"
+            android:layout_gravity="left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rbtn_male"
+            android:checked="true"
+            android:layout_weight="1"/>
+
+          <RadioButton
+            android:text="여자"
+            android:layout_gravity="right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rbtn_female"
+            android:layout_weight="1"/>
+
+        </RadioGroup>
+
+      </LinearLayout>
+
+      <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rbtn_female"
-        android:layout_weight="1"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
-    </RadioGroup>
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:gravity="left"
+          android:textSize="15sp"
+          android:textColor="@color/colorBlack"
+          android:text="출생년도"/>
 
-  </LinearLayout>
+        <Spinner
+          android:id="@+id/sp_age"
+          android:layout_width="match_parent"
+          android:layout_height="40dp">
 
-  <LinearLayout
-    android:orientation="vertical"
-    android:gravity="center_vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="50dp"
-    android:layout_marginRight="50dp">
+        </Spinner>
 
-    <TextView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:gravity="left"
-      android:textSize="15sp"
-      android:textColor="@color/colorBlack"
-      android:text="출생년도" />
+      </LinearLayout>
 
-    <Spinner
-      android:id="@+id/sp_age"
-      android:layout_width="match_parent"
-      android:layout_height="40dp">
+      <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
-    </Spinner>
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:gravity="left"
+          android:textSize="15sp"
+          android:textColor="@color/colorBlack"
+          android:text="관심분야"/>
 
-  </LinearLayout>
+        <GridLayout
+          android:layout_width="match_parent"
+          android:layout_height="250dp"
+          android:id="@+id/gl_favorites"
+          android:columnCount="2"
+          android:columnWidth="80dp"
+          android:layout_marginTop="10dp">
 
-  <LinearLayout
-    android:orientation="vertical"
-    android:gravity="center_vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="50dp"
-    android:layout_marginRight="50dp">
+          <Button
+            android:id="@+id/btn_info_beauty"
+            android:text="뷰티"
+            android:layout_width="150dp"
+            android:layout_height="60dp"/>
 
-    <TextView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:gravity="left"
-      android:textSize="15sp"
-      android:textColor="@color/colorBlack"
-      android:text="관심분야" />
+          <Button
+            android:id="@+id/btn_info_shopping"
+            android:text="쇼핑"
+            android:layout_width="150dp"
+            android:layout_height="60dp"/>
 
-    <GridView
-      android:id="@+id/lv_favorites"
-      android:numColumns="2"
-      android:columnWidth="80dp"
-      android:layout_marginTop="10dp"
-      android:layout_width="match_parent"
-      android:layout_height="150dp"
-      android:choiceMode="multipleChoice" />
+          <Button
+            android:id="@+id/btn_info_game"
+            android:text="게임"
+            android:layout_width="150dp"
+            android:layout_height="60dp"/>
 
-    <TextView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_marginTop="5dp"
-      android:textSize="12sp"
-      android:text="3개 이상 선택해주세요"
-      android:gravity="left" />
+          <Button
+            android:id="@+id/btn_info_eat"
+            android:text="외식"
+            android:layout_width="150dp"
+            android:layout_height="60dp"/>
 
-  </LinearLayout>
+          <Button
+            android:id="@+id/btn_info_tour"
+            android:text="여행\n(항공,호텔)"
+            android:layout_width="150dp"
+            android:layout_height="60dp"/>
 
-  <LinearLayout
-    android:orientation="vertical"
-    android:gravity="center_vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="50dp"
-    android:layout_marginRight="50dp">
+          <Button
+            android:id="@+id/btn_info_finance"
+            android:text="금융(보험,제테크)"
+            android:layout_width="150dp"
+            android:layout_height="60dp"/>
 
-    <TextView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:gravity="left"
-      android:textSize="15sp"
-      android:textColor="@color/colorBlack"
-      android:text="추천 아이디" />
+          <Button
+            android:id="@+id/btn_info_culture"
+            android:text="문화\n(콘서트,공연)"
+            android:layout_width="150dp"
+            android:layout_height="60dp"/>
 
-    <EditText
-      android:layout_width="121dp"
-      android:layout_height="wrap_content"
-      android:textSize="13sp"
-      android:id="@+id/info_recommendidEditText"
-      android:hint="추천인은 생략 가능합니다"
-      android:background="@drawable/edittext"
-      android:paddingBottom="10dp"
-      android:paddingTop="10dp"
-      android:paddingLeft="10dp"
-      android:layout_weight="0.45"/>
+        </GridLayout>
 
-  </LinearLayout>
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginTop="5dp"
+          android:textSize="12sp"
+          android:text="3개 이상 선택해주세요"
+          android:gravity="left"/>
 
+      </LinearLayout>
 
-  <LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="30dp"
-    android:orientation="horizontal"
-    android:gravity="center_vertical">
+      <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
-    <CheckBox
-      android:text="CheckBox"
-      android:layout_width="30dp"
-      android:layout_height="30dp"
-      android:layout_marginRight="10dp"
-      android:id="@+id/cb_join_agree"/>
-    <TextView
-      android:text="서비스 이용 약관, 개인정보 취급 방침, 위치기반 서비스 이용약관에 동의합니다."
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:id="@+id/textView6"/>
-  </LinearLayout>
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginBottom="5dp"
+          android:gravity="left"
+          android:textSize="20sp"
+          android:textColor="@color/colorBlack"
+          android:text="추천 아이디"/>
 
-  <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="30dp">
-    <Button
-      android:text="서비스 이용 약관"
-      android:layout_width="wrap_content"
-      android:layout_height="40dp"
-      android:id="@+id/btn_join_service"
-      android:layout_weight="1"/>
-    <Button
-      android:text="개인정보 취급 방침"
-      android:layout_width="wrap_content"
-      android:layout_height="40dp"
-      android:id="@+id/btn_join_personal"
-      android:layout_weight="1"/>
-    <Button
-      android:text="위치기반 서비스 이용약관"
-      android:layout_width="wrap_content"
-      android:layout_height="40dp"
-      android:id="@+id/btn_join_gps"
-      android:layout_weight="1"/>
-  </LinearLayout>
+        <EditText
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:textSize="15sp"
+          android:id="@+id/edit_recommend"
+          android:hint="추천인 아이디를 입력해주세요 (선택)"
+          android:background="@drawable/edittext"
+          android:paddingBottom="15dp"
+          android:paddingTop="15dp"
+          android:paddingLeft="15dp"/>
 
-  <LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="30dp"
-    android:orientation="horizontal"
-    android:weightSum="1">
+      </LinearLayout>
 
-    <Button
-      android:layout_width="match_parent"
-      android:layout_height="35dp"
-      android:id="@+id/info_storeButton"
-      android:textSize="15sp"
-      android:text="저장하기"
-      android:src="@drawable/button"
-      android:textColor="@color/colorWhite"
-      android:background="@color/colorNavy"
-    />
+      <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp">
 
-  </LinearLayout>
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginBottom="5dp"
+          android:gravity="left"
+          android:textSize="20sp"
+          android:textColor="@color/colorBlack"
+          android:text="약관동의"/>
+
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginLeft="30dp"
+          android:layout_marginRight="30dp">
+          <Button
+            android:text="서비스 이용 약관"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:id="@+id/btn_signup_service"
+            android:layout_weight="1"/>
+          <Button
+            android:text="개인정보 취급 방침"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:id="@+id/btn_signup_personal"
+            android:layout_weight="1"/>
+          <Button
+            android:text="위치기반 서비스 이용약관"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:id="@+id/btn_signup_gps"
+            android:layout_weight="1"/>
+        </LinearLayout>
+
+        <Button
+          android:layout_gravity="center"
+          android:text="약관 전체동의"
+          android:layout_width="wrap_content"
+          android:layout_height="40dp"
+          android:id="@+id/btn_signup_all"/>
+
+      </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <Button
+          android:layout_width="match_parent"
+          android:layout_height="35dp"
+          android:id="@+id/btn_signup_ok"
+          android:textSize="15sp"
+          android:text="저장하기"
+          android:src="@drawable/button"
+          android:textColor="@color/colorWhite"
+          android:background="@color/colorNavy"
+        />
+
+      </LinearLayout>
+
+    </LinearLayout>
+
+  </ScrollView>
 
 </LinearLayout>
