--- a/app/src/main/res/layout/activity_advertisement_detail.xml
+++ b/app/src/main/res/layout/activity_advertisement_detail.xml
@@ -49,6 +49,7 @@
   </LinearLayout>
 
   <FrameLayout
+    android:id="@+id/fl_advertise_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
