--- a/app/src/main/res/drawable/ad_line.xml
+++ b/app/src/main/res/drawable/ad_line.xml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
   <item>
-    <shape>
-      <stroke
-        android:width="1dip" android:color="#dddddd"/>
-
-      <corners
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp">
-
-      </corners>
-
+    <shape android:shape="rectangle">
+      <corners android:radius="10dip" />
+      <stroke android:width="1dp" android:color="#33000000"/>
     </shape>
   </item>
-</selector>
+</layer-list>
