--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
   <LinearLayout
     android:layout_marginLeft="14dp"
     android:layout_marginRight="14dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     android:orientation="horizontal"
     android:gravity="center"
     android:layout_width="match_parent"
@@ -60,6 +60,7 @@
           android:layout_gravity="center"
           android:textSize="32sp"
           android:textStyle="bold"
+          android:textColor="#000000"
           android:text="0"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
