--- a/app/src/main/res/layout/item_list_progressbar.xml
+++ b/app/src/main/res/layout/item_list_progressbar.xml
@@ -4,12 +4,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-  <ProgressBar
-    style="?android:attr/progressBarStyle"
-    android:layout_gravity="center_horizontal"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/progressBar2"/>
+  <ProgressBar android:id="@android:id/progress"
+               style="?android:attr/progressBarStyle"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center_horizontal"
+               android:max="10000"
+               android:layout_marginTop="5dp"
+               android:layout_marginBottom="5dp"/>
+
 </LinearLayout>
