--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,9 @@
     <item name="android:windowBackground">@drawable/splash</item>
   </style>
 
+  <style parent="android:style/Theme.Dialog" name="FullHeightDialog">
+    <item name="@android:windowBackground">@color/noAlpha</item>
+    <item name="android:windowNoTitle">true</item>
+  </style>
+
 </resources>
