채널 리스트 완료

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,7 +98,7 @@
       android:background="@drawable/add_friend"
       android:layout_width="32dp"
       android:layout_height="20dp"
-      android:id="@+id/ibtn_recommend"/>
+      android:id="@+id/ibtn_right_button"/>
 
   </LinearLayout>
 
