--- a/app/src/main/res/layout/item_channel_list_editorspage.xml
+++ b/app/src/main/res/layout/item_channel_list_editorspage.xml
@@ -12,7 +12,7 @@
     android:layout_width="match_parent"
     android:layout_height="96dp">
 
-    <ImageButton
+    <ImageView
       android:layout_width="160dp"
       android:layout_height="match_parent"
       android:src="@drawable/ad_line"
