--- a/app/src/main/res/layout/fragment_point_detail.xml
+++ b/app/src/main/res/layout/fragment_point_detail.xml
@@ -11,6 +11,7 @@
     android:layout_height="60dp">
 
     <TextView
+      android:id="@+id/tv_point_type"
       android:gravity="center_vertical"
       android:text="가입 축하 포인트 적립"
       android:textSize="15sp"
@@ -18,6 +19,7 @@
       android:layout_height="30dp"/>
 
     <TextView
+      android:id="@+id/tv_point_at"
       android:gravity="center_vertical"
       android:text="2017-10-03 20:00"
       android:textSize="12sp"
