--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,12 +102,12 @@
 
   </LinearLayout>
 
-  <android.support.v4.view.ViewPager
+  <com.puzi.puzi.ui.CustomViewPager
     android:id="@+id/vp_main"
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-  </android.support.v4.view.ViewPager>
+  </com.puzi.puzi.ui.CustomViewPager>
 
   <LinearLayout
     android:id="@+id/intro_fragment_line"
