--- a/app/src/main/res/layout/item_channel_list_channel.xml
+++ b/app/src/main/res/layout/item_channel_list_channel.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:padding="0dp"
               android:layout_margin="0dp"
@@ -23,7 +23,11 @@
       android:background="@color/colorWhite"
       android:layout_height="match_parent">
 
-      <ImageButton
+      <com.joooonho.SelectableRoundedImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:sriv_right_top_corner_radius="5dp"
+        app:sriv_left_top_corner_radius="5dp"
+        app:sriv_oval="false"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:scaleType="centerCrop"
@@ -46,7 +50,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:layout_weight="1">
 
-        <ImageButton
+        <com.joooonho.SelectableRoundedImageView
+          xmlns:app="http://schemas.android.com/apk/res-auto"
           android:layout_width="24dp"
           android:layout_height="24dp"
           android:layout_marginTop="4dp"
@@ -55,7 +60,13 @@
           android:layout_marginRight="8dp"
           android:background="#00000000"
           android:src="@drawable/active_icon"
-          android:id="@+id/ibtn_item_channel_company_image_1"/>
+          android:id="@+id/ibtn_item_channel_company_image_1"
+          android:scaleType="centerCrop"
+          app:sriv_right_top_corner_radius="12dp"
+          app:sriv_left_top_corner_radius="12dp"
+          app:sriv_left_bottom_corner_radius="12dp"
+          app:sriv_right_bottom_corner_radius="12dp"
+          app:sriv_oval="false" />
 
         <ImageView
           android:layout_gravity="center_vertical"
@@ -116,7 +127,11 @@
       android:layout_width="0dp"
       android:layout_height="match_parent" >
 
-      <ImageButton
+      <com.joooonho.SelectableRoundedImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:sriv_right_top_corner_radius="5dp"
+        app:sriv_left_top_corner_radius="5dp"
+        app:sriv_oval="false"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:scaleType="centerCrop"
@@ -133,13 +148,21 @@
         android:background="#00000000"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:id="@+id/tv_item_channel_title_2" android:layout_weight="1"/>
+
       <LinearLayout
         android:paddingBottom="5dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:layout_weight="1">
 
-        <ImageButton
+        <com.joooonho.SelectableRoundedImageView
+          xmlns:app="http://schemas.android.com/apk/res-auto"
+          app:sriv_right_top_corner_radius="12dp"
+          app:sriv_left_top_corner_radius="12dp"
+          app:sriv_left_bottom_corner_radius="12dp"
+          app:sriv_right_bottom_corner_radius="12dp"
+          app:sriv_oval="false"
+          android:scaleType="centerCrop"
           android:layout_width="24dp"
           android:layout_height="24dp"
           android:layout_marginTop="4dp"
