--- a/app/src/main/res/layout/fragment_channel_detail.xml
+++ b/app/src/main/res/layout/fragment_channel_detail.xml
@@ -25,26 +25,30 @@
         android:layout_height="45dp">
 
         <ImageButton
-          android:paddingRight="10dp"
+          android:paddingRight="17dp"
           android:paddingLeft="8dp"
           android:paddingTop="12.5dp"
           android:paddingBottom="12.5dp"
-          android:layout_width="30dp"
+          android:layout_width="37dp"
           android:layout_height="match_parent"
           android:background="#00000000"
           android:src="@drawable/back"
           android:id="@+id/ibtn_chanenl_detail_back"
           android:backgroundTint="#000000"/>
 
-        <ImageButton
-          android:paddingLeft="7dp"
-          android:paddingRight="7dp"
-          android:paddingTop="8dp"
-          android:paddingBottom="8dp"
-          android:layout_width="43dp"
-          android:layout_height="match_parent"
+        <com.joooonho.SelectableRoundedImageView
+          xmlns:app="http://schemas.android.com/apk/res-auto"
+          app:sriv_right_top_corner_radius="14.5dp"
+          app:sriv_left_top_corner_radius="14.5dp"
+          app:sriv_left_bottom_corner_radius="14.5dp"
+          app:sriv_right_bottom_corner_radius="14.5dp"
+          app:sriv_border_color="#979797"
+          app:sriv_border_width="1dp"
+          android:layout_marginTop="8dp"
+          android:layout_marginRight="14dp"
+          android:layout_width="29dp"
+          android:layout_height="29dp"
           android:scaleType="centerCrop"
-          android:background="@drawable/oval"
           android:id="@+id/ibtn_chanenl_detail_company_image"/>
 
         <TextView
@@ -235,7 +239,7 @@
         android:paddingRight="16dp"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
-        android:layout_width="63dp"
+        android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_gravity="center_vertical"
         android:id="@+id/btn_channel_detail_write"
